Bug 5483 - 2.6.13.x crashes with enabled acpi-cpufreq
Summary: 2.6.13.x crashes with enabled acpi-cpufreq
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Processor (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Venkatesh Pallipadi
URL:
Keywords:
: 4454 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-10-22 13:16 UTC by Boris Nicolaev
Modified: 2006-02-02 14:37 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.13.x
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
acpidump output (79.28 KB, text/plain)
2005-10-22 13:22 UTC, Boris Nicolaev
Details
DSDT (16.20 KB, text/plain)
2005-10-22 13:24 UTC, Boris Nicolaev
Details
dmesg output of 2.6.12.6 kernel (13.58 KB, text/plain)
2005-10-22 13:27 UTC, Boris Nicolaev
Details
dmesg output of 2.6.14-rc5 kernel (14.28 KB, text/plain)
2005-10-22 13:31 UTC, Boris Nicolaev
Details
DSDT (16.20 KB, application/octet-stream)
2005-10-22 13:33 UTC, Boris Nicolaev
Details
_PDC call sequence change. (1.27 KB, patch)
2005-10-22 18:57 UTC, Venkatesh Pallipadi
Details | Diff
dmesg output of patched 2.6.13.4 kernel (14.01 KB, text/plain)
2005-10-22 22:52 UTC, Boris Nicolaev
Details
dmesg output of patched 2.6.14-rc5 kernel (13.93 KB, text/plain)
2005-10-22 22:53 UTC, Boris Nicolaev
Details
Cleaner ACPI _PDC cleanup patch (21.71 KB, patch)
2005-10-23 16:31 UTC, Venkatesh Pallipadi
Details | Diff
dmesg of 2.6.14-rc5 kernel with applied cleaner PDC patch (13.53 KB, text/plain)
2005-10-24 10:48 UTC, Boris Nicolaev
Details
refreshed patch against 2.6.15-rc3 acpi tree (20.76 KB, patch)
2005-11-30 21:01 UTC, Len Brown
Details | Diff
5483 earlier patch had an issue with IPF. Incremental patch to fix it. (4.55 KB, patch)
2005-12-01 18:16 UTC, Venkatesh Pallipadi
Details | Diff
acpidump output (257.45 KB, text/plain)
2006-01-08 10:52 UTC, Len Brown
Details
brice's dmesg (15.40 KB, text/plain)
2006-01-08 10:53 UTC, Len Brown
Details

Description Boris Nicolaev 2005-10-22 13:16:50 UTC
Most recent kernel where this bug did not occur: 2.6.12.6
Distribution: Slackware 10.1
Hardware Environment: Toshiba Satellite A60-772 laptop with P4-M 3.2Ghz CPU
Software Environment:
Problem Description:
System (kernel 2.6.13.x (x -- 1, 2, 3, 4)) crashes with 'Attempt to kill init'
message (acpi-cpufreq compiled into kernel whith module -- the same result). 
Before crash, I can see this message (it taken from 2.6.14-rc5):
..............................................................................
    ACPI-0292: *** Error: Looking up [_PPC] in namespace, AE_ALREADY_EXISTS
    ACPI-0508: *** Error: Method execution failed [\_PR_.CPU0._PDC] (Node 
dbf83260), AE_ALREADY_EXISTS
acpi-cpufreq: CPU0 - ACPI performance management activated.
    ACPI-0292: *** Error: Looking up [_PPC] in namespace, AE_ALREADY_EXISTS
    ACPI-0508: *** Error: Method execution failed [\_PR_.CPU1._PDC] (Node 
dbf83200), AE_ALREADY_EXISTS
acpi-cpufreq: CPU1 - ACPI performance management activated.
..............................................................................
I can't send 2.6.13.x dmesg message, because magic sequence doesn't work.
After disabling acpi-cpufreq sysntem works normally.
With 2.6.12.6 kernel -- all ok. With 2.6.14-rc5 i get the same error
message, but system works normally and I can change cpu frequency.
Also, acpi_serialize option not helpful.

Steps to reproduce:
Install 2.6.13 kernel on @#$@$@ Toshiba Satellite A60-772 notebook.
Comment 1 Boris Nicolaev 2005-10-22 13:22:53 UTC
Created attachment 6359 [details]
acpidump output

No differences in 2.6.12.6 and 2.6.14-5
Comment 2 Boris Nicolaev 2005-10-22 13:24:54 UTC
Created attachment 6360 [details]
DSDT

No differences in 2.6.12.6 and 2.6.14-5
Comment 3 Boris Nicolaev 2005-10-22 13:27:10 UTC
Created attachment 6361 [details]
dmesg output of 2.6.12.6 kernel
Comment 4 Boris Nicolaev 2005-10-22 13:31:01 UTC
Created attachment 6362 [details]
dmesg output of 2.6.14-rc5 kernel
Comment 5 Boris Nicolaev 2005-10-22 13:33:15 UTC
Created attachment 6363 [details]
DSDT

No differences in 2.6.12.6 and 2.6.14-rc5
Comment 6 Venkatesh Pallipadi 2005-10-22 18:57:21 UTC
Created attachment 6364 [details]
_PDC call sequence change.


This patch should help. Let me know how it goes with this patch. If this works
I will send out a cleaner version of this to base later.
Comment 7 Boris Nicolaev 2005-10-22 22:50:28 UTC
This patch normalizes 2.6.13.4 and remove error message from 2.6.14-rc5. 
Thank you very much -- it's work ! 
In attachments dmesg from patched 2.6.13.4 and 2.6.14-rc5.
Comment 8 Boris Nicolaev 2005-10-22 22:52:34 UTC
Created attachment 6365 [details]
dmesg output of patched 2.6.13.4 kernel
Comment 9 Boris Nicolaev 2005-10-22 22:53:39 UTC
Created attachment 6366 [details]
dmesg output of patched 2.6.14-rc5 kernel
Comment 10 Venkatesh Pallipadi 2005-10-23 05:36:35 UTC
Thats great! I will attach a cleaner patch in a day or two. 
Comment 11 Venkatesh Pallipadi 2005-10-23 16:31:19 UTC
Created attachment 6367 [details]
Cleaner ACPI _PDC cleanup patch

Attached is a cleaner (and bigger) patch. Minimally tested at this point and
needs more testing before going to the base. Please check whether this still
fixes the issue here.
Comment 12 Boris Nicolaev 2005-10-24 10:42:50 UTC
I try cleaner ACPI PDC patch with 2.6.14-rc5 kernel and it's working
normally. I can't try it with 2.6.13.4 kernel because file
'linux-2.6.13/arch/ia64/kernel/cpufreq/acpi-cpufreq.c' doesn't exist.
Later I can test this patch without patching unexisting files.
Comment 13 Boris Nicolaev 2005-10-24 10:48:04 UTC
Created attachment 6377 [details]
dmesg of 2.6.14-rc5 kernel with applied cleaner PDC patch
Comment 14 Venkatesh Pallipadi 2005-10-24 10:51:17 UTC
Thanks. Just testing it against 2.6.14-rc5 should be enough. I don't think you
need to retest it with 2.6.13. This patch will need some more testing and I
expect it to go in 2.6.15 timeframe. 

So, you may still see failures with 2.6.14 release :(.
Comment 15 Venkatesh Pallipadi 2005-10-29 08:49:28 UTC
*** Bug 4454 has been marked as a duplicate of this bug. ***
Comment 16 Boris Nicolaev 2005-11-15 06:42:49 UTC
Cleaner PDC patch seems to be not included in 2.6.15-rc1
2.6.15-rc1 works without patch same as 2.6.14,
with patch -- all ok.
Comment 17 Len Brown 2005-11-30 21:01:40 UTC
Created attachment 6731 [details]
refreshed patch against 2.6.15-rc3 acpi tree

refreshed patch from comment 11 applied to acpi-test tree
Comment 18 Len Brown 2005-12-01 15:13:45 UTC
Before this patch an SE7525GP2 (dual 3.6GHz Xeon) running the latest BIOS
(SE7525GP20.86B.P.09.00.0039.092120051351) was unable to load acpi-cpufreq.

After this patch it works normally -- yipee!

Comment 19 Venkatesh Pallipadi 2005-12-01 18:16:44 UTC
Created attachment 6745 [details]
5483 earlier patch had an issue with IPF. Incremental patch to fix it.
Comment 20 Len Brown 2005-12-05 14:16:21 UTC
patch in comment #19 applied to acpi-test tree
Comment 21 Len Brown 2006-01-08 10:52:40 UTC
Created attachment 6968 [details]
acpidump output

This patch causes acpi-cpufreq to ENODEV on Brice Goglin's machine.
Comment 22 Len Brown 2006-01-08 10:53:39 UTC
Created attachment 6969 [details]
brice's  dmesg
Comment 23 Boris Nicolaev 2006-01-08 12:29:04 UTC
Brice's dmesg doesn't contains messages, related acpi-cpufreq to
ENODEV issue. 
Comment 24 Len Brown 2006-02-02 14:37:01 UTC
Brice's issue was that the preferred native driver,
speedstep-centrino, was missing from the configuration.

we need to merge these two drivers to make it impossible
to mis-configure.

Shipped in 2.6.16-rc1-git6 -- closing.

Note You need to log in before you can comment on or make changes to this bug.